# Zero

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PongAttempt.v1.txt  README.md  imgui.ini  premake5.lua
Sandbox/: HUDLayer.cpp  HUDLayer.h  SandboxApplication.cpp  SandboxApplication.h  SandboxLayer.cpp  SandboxLayer.h  SandboxLuaLayer.cpp  SandboxLuaLayer.hpp  pch.h
ZeroEditor/: EditorLayer.cpp  EditorLayer.hpp  ZeroEditor.cpp  ZeroEditor.hpp  ZeroLuaLayer.cpp  ZeroLuaLayer.hpp
ZeroFramework/: CMakeLists.txt  premake5.lua
ZeroFramework/Zero/: Zero.h  zr_pch.cpp  zr_pch.h
ZeroFramework/Zero/Zero/: Application.cpp  Application.h  CameraController.hpp  Clock.cpp  Clock.h  CommandQueue.cpp  CommandQueue.h  Core.h  EntryPoint.h  EventDispatcher.inl  Image.cpp  Image.h  ImageReader.cpp  ImageReader.h  ImageWriter.cpp  ImageWriter.h  Input.h  InputCodes.h  Layer.h  LayerStack.cpp  Log.cpp  Log.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Model.cpp  Model.h  Model3D.cpp  Model3D.h  ModelData.cpp  ModelData.h  ModelImpl.h  ModelLoader.cpp  ModelLoader.h  ModelLogger.cpp  ModelLogger.h  MouseCodes.h  Movable.cpp  Movable.h  (+13 more)
ZeroFramework/Zero/Zero/Core/: Application.cpp  Application.h  Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  Clock.cpp  Clock.h  Core.h  EntryPoint.h  EventDispatcher.h  EventDispatcher.inl  Events.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Loadable.hpp  Log.cpp  Log.h  MouseCodes.h  Profiller.h  Timer.cpp  Timer.h  Timer.inl  UUID.hpp  Window.h
ZeroFramework/Zero/Zero/Core/Events/: ApplicationEvent.cpp  Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  KeyPressedEvent.h  KeyTypedEvent.cpp  MouseButtonEvent.cpp  MouseButtonPressedEvent.cpp  MouseButtonPressedEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  MouseScrollEvent.h  RenderWindowFramebufferResizeEvent.hpp  RenderWindowResizeEvent.hpp  WindowCloseEvent.cpp  WindowGainedFocusEvent.h  WindowResizeEvent.cpp  WindowResizeEvent.h
ZeroFramework/Zero/Zero/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.cpp  KeyPressedEvent.cpp  KeyPressedEvent.h  KeyReleasedEvent.cpp  KeyReleasedEvent.h  KeyTypedEvent.cpp  KeyTypedEvent.h  MouseButtonEvent.h  MouseButtonPressedEvent.cpp  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.cpp  MouseButtonReleasedEvent.h  MouseMoveEvent.cpp  MouseMoveEvent.h  MouseScrollEvent.cpp  MouseScrollEvent.h  WindowCloseEvent.cpp  WindowCloseEvent.h  WindowGainedFocusEvent.cpp  WindowLostFocusEvent.cpp  WindowLostFocusEvent.h  WindowResizeEvent.cpp  WindowResizeEvent.h
ZeroFramework/Zero/Zero/ImGui/: ImGuiConsole.cpp  ImGuiConsole.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiWidgetComponent.hpp
ZeroFramework/Zero/Zero/Platform/Lua/: LuaBindings.hpp  LuaVM.hpp
ZeroFramework/Zero/Zero/Platform/OpenGL/: GL_ERR_CHECK.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLCubeMap.cpp  OpenGLCubeMap.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
ZeroFramework/Zero/Zero/Platform/RTTR/: RttrMetadata.h  TestSprite.h
ZeroFramework/Zero/Zero/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
ZeroFramework/Zero/Zero/Renderer/: Batch.h  Batch.inl  BatchManager.h  BatchManager.inl  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  Drawable.hpp  Drawable2D.cpp  Drawable2D.hpp  FPSCamera.cpp  FPSCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  ImageReader.cpp  ImageReader.h  Line.cpp  Line.hpp  Material.h  Movable.hpp  Quad.hpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Resizable.h  Rotatable.hpp  (+15 more)
ZeroFramework/Zero/Zero/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
ZeroFramework/Zero/Zero/Scene/Components/: IDComponent.hpp  SpriteComponent.hpp  TagComponent.hpp  TransformComponent.hpp
resources/scripts/: Layer.lua  Pong.lua
resources/shaders/: Batch.glsl  BatchTexture.glsl  Texture.glsl  texture.fs  texture.vs
resources/skyboxes/skybox/: Thumbs.db
